--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-    "name": "node-api2-project",
-    "version": "0.0.1",
-    "description": "Project for Node API 2 Module",
-    "private": true,
-    "main": "index.js",
-    "scripts": {
-        "server": "nodemon index.js"
-    },
-    "dependencies": {
-        "knex": "^0.21.2",
-        "sqlite3": "^5.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.4"
-    }
+  "name": "node-api2-project",
+  "version": "0.0.1",
+  "description": "Project for Node API 2 Module",
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "server": "nodemon index.js"
+  },
+  "dependencies": {
+    "knex": "^0.21.2",
+    "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VickieNelson/node-api2-project.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VickieNelson/node-api2-project/issues"
+  },
+  "homepage": "https://github.com/VickieNelson/node-api2-project#readme"
 }
